--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-hello this world i am bharath mani shanker
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BHARATH WEBSITE</title>
+</head>
+<body>
+    <h1>BHARATH MANI SHANKER </h1>
+    <p> hello this is <strong>BHARATH</strong> i am ready to learn html and i want to focus on my studies because i want to prove to my parents who iam and what will i do, no one supports me </p>
+    <p> i am <em>STUDYING</em> in the <strong>ADITYA DEGREE COLLEGE</strong> in amalapuram</p>
+    <p> I WANT TO BE SOFTWARE WORKER.<br>ALSO I WANT TO BE DIRECTOR</p>
+    <P>I AM DIE HEART FAN OF <STRONG>MAHESH BABU</STRONG></P>
+    <p>my insipiration is <strong>ss rajamouli</strong></p>
+
+</body>
+</html>
